# Physics-informed-ML-ODW

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
api/: index.html
data/: formosa_2018.tif
docs/: api.md  examples.md  index.md
examples/: index.html
search/: search_index.json
src/: usage.ipynb
src/physics_informed_ml_odw/: __init__.py  predict.py
src/physics_informed_ml_odw/models/: __init__.py
test/: demo.ipynb
