[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physics_informed_ml_odw"
version = "0.1.0"

dependencies = [
  "sensingpy",
  "numpy",
  "pandas",
  "scikit-learn==1.7.2",
]

requires-python = ">= 3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
physics_informed_ml_odw = ["models/*.pkl"]